# whats-on-fip

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  values.yaml
.github/workflows/: build-and-release.yaml  codeql.yml  deploy.yaml  test.yaml
tests/: test_api_app.py  test_deezer.py  test_fiftyfifty.py  test_main.py  test_radio_feelgood_api.py  test_radio_france_api.py  test_radio_meuh_api.py  test_spotify.py  test_spotify_api.py  test_telegram_fmt.py  test_unofficial_api.py  utils.py
whats_on_fip/: deezer.py  main.py  models.py  radio.py  radio_feelgood_api.py  radio_fiftyfifty.py  radio_france_api.py  radio_meuh_api.py  spotify.py  spotify_api.py  unofficial_api.py
whats_on_fip/api/: app.py
whats_on_fip/slack/: bot.py  fmt.py
whats_on_fip/telegram/: bot.py  fmt.py  handlers.py
whatsonfip/: main.py  models.py  radio_france_api.py  radio_meuh_api.py  spotify_api.py  unofficial_api.py
